adding example 'decode/encode custom data bype with 'codec_traits'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 project(avrodemo CXX)
 
-add_library(avrodemo src/avrodemo.cpp)
-target_include_directories(avrodemo PUBLIC include)
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
 
-set_target_properties(avrodemo PROPERTIES PUBLIC_HEADER "include/avrodemo.h")
-install(TARGETS avrodemo)
+add_executable(avrodemo
+  avrodemo.cpp
+  generic_type_usecase.cpp)
+
+target_link_libraries(avrodemo ${CONAN_LIBS})
